# JOB-Complex

./: README.md
notebooks/: README.md  card_est.ipynb  cost_est.ipynb  lcm_plot.ipynb  pyproject.toml  query_stats.ipynb  speedups.ipynb
notebooks/dataset_info/imdb/: column_statistics_scaled1.json  schema.json  string_statistics_scaled1.json
notebooks/dataset_info/imdb/schema_sql/: postgres.sql  postgres_scaled1.sql
notebooks/utils/: cleanup_sql.py  cleanup_sql_test.py  helper.py
