[project]
name = "jobextended"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Johannes Wehrstein", email = "johannes.wehrstein@cs.tu-darmstadt.de" }
]
dependencies = [
    "numpy>=2.3.1",
    "sqlparse",
    "tqdm>=4.67.1",
    "pandas>=2.3.0",
    "matplotlib>=3.10.3",
    "tabulate>=0.9.0",
    "seaborn>=0.13.2",
    "scipy>=1.16.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["notebooks"]
